umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_accldraw_calcium benzoate.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 18
sum_formula: C14CaO4
graph6: RY_Y?CA??????B?@?@??B?@???G??O
