umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_CHEBI_53695.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 25
sum_formula: C12H8O2
graph6: XhCGGC@AG_O??@?@??K????C_???_?@??@???_??G??C???C???
